# XiaoTuMathBox

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: config.cmake.in  deb.cmake
doc/: Doxyfile.in
include/XiaoTuDataBox/: Utils.hpp  VectorList.hpp
include/XiaoTuMathBox/: Circle.h  CircularValue.h  EigenExt.h  Equation.h  Euclidean2.hpp  Exception.hpp  HomoConic2.hpp  HomoConic2D.h  HomoLine2.hpp  HomoLine2D.h  HomoLine3.hpp  HomoLine3D.h  HomoPlane3.hpp  HomoPlane3D.h  HomoPoint2.hpp  HomoPoint2D.h  HomoPoint3.hpp  HomoPoint3D.h  HomoUtils2.hpp  HomoUtils3.hpp  Line2D.h  Point2.hpp  Point2D.h  Projective2.hpp  Projective3.hpp  ProjectiveGeometry.h  Vector2.hpp
include/XiaoTuMathBox/Common/: Common.hpp
include/XiaoTuMathBox/Geometry/: Declarations.hpp  Euclidean2.hpp  Euclidean3.hpp  Geometry.hpp  HomoConic2.hpp  HomoLine2.hpp  HomoLine3.hpp  HomoPlane3.hpp  HomoPoint2.hpp  HomoPoint3.hpp  HomoUtils2.hpp  HomoUtils3.hpp  Line3.hpp  Plane3.hpp  PluckerLine3.hpp  Point2.hpp  Polygon.hpp  Projective2.hpp  Vector2.hpp  Vector3.hpp  VectorPoint2.hpp
include/XiaoTuMathBox/LinearAlgibra/: Bidiagonal.hpp  Cholesky.hpp  Constants.hpp  DMatrix.hpp  DMatrixView.hpp  Declarations.hpp  EigenImplicitQR.hpp  EigenNaiveQR.hpp  EigenPartitionQR.hpp  EigenShiftQR.hpp  EigenValue.hpp  EquationElimination.hpp  Givens.hpp  LDLT.hpp  LU.hpp  LUDecomposition.hpp  LinearAlgibra.hpp  Matrix.hpp  MatrixBase.hpp  MatrixColView.hpp  MatrixComma.hpp  MatrixOperators.hpp  MatrixRowView.hpp  MatrixSubView.hpp  MatrixView.hpp  MatrixViewBase.hpp  Orthogonol.hpp  PQR_Householder.hpp  Permutation.hpp  PingPangView.hpp  QR_Algorithms.hpp  QR_Givens.hpp  QR_GramSchmidt.hpp  QR_Householder.hpp  SVD_GKR.hpp  SVD_Naive.hpp  UpperHessenberg.hpp  VMatrix.hpp
include/XiaoTuMathBox/Numerical/: EquationRoot.hpp
src/: Circle.cpp  CircularValue.cpp  HomoLine2D.cpp  HomoLine3D.cpp  HomoPlane3D.cpp  HomoPoint2D.cpp  HomoPoint3D.cpp  Line2D.cpp  Makefile  Point2D.cpp
test/: Makefile  t_DMatrix.cpp  t_DMatrixView.cpp  t_Eigen.cpp  t_Euclidean2.cpp  t_Geometry.cpp  t_Matrix.cpp  t_MatrixComma.cpp  t_MatrixInverse.cpp  t_MatrixSubView.cpp  t_MatrixView.cpp  t_Permutation.cpp  t_Point2.cpp  t_ProjectiveGeometry.cpp  t_ProjectiveGeometry2.cpp  t_ProjectiveGeometry3.cpp  t_QR.cpp  t_SVD.cpp
test/DataBox/: CMakeLists.txt  t_VectorList.cpp
test/Geometry/: t_Euclidean3.cpp  t_Projective2.cpp  t_Projective3.cpp  t_ProjectiveGeometry2.cpp  t_ProjectiveGeometry3.cpp
test/LinearAlgibra/: t_DMatrix.cpp  t_Eigen.cpp  t_MatrixSubView.cpp  t_MatrixView.cpp  t_SVD.cpp
test/MathBox/: CMakeLists.txt
test/MathBox/Geometry/: t_Euclidean2.cpp  t_Euclidean3.cpp  t_Polygon.cpp  t_Projective2.cpp  t_Projective3.cpp
test/MathBox/LinearAlgibra/: t_DMatrix.cpp  t_DMatrixView.cpp  t_Eigen.cpp  t_Matrix.cpp  t_MatrixComma.cpp  t_MatrixInverse.cpp  t_MatrixSubView.cpp  t_MatrixView.cpp  t_Permutation.cpp  t_QR.cpp  t_SVD.cpp
test/MathBox/Numerical/: t_EquationRoot.cpp
